# MiniMart-App

./: .dockerignore  .prettierrc.json  Dockerfile  fly.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  react-router.config.ts  types.d.ts
app/: root.tsx  routes.ts
app/components/: Navigation.tsx  NftCard.tsx  NftView.tsx
app/routes/: home.tsx  view.tsx
backend/: Cargo.toml  Dockerfile  bacon.toml  db.db  fly.toml  package.json  pnpm-lock.yaml  tsconfig.json
backend/queries/: get_orders.graphql  schema.graphql
backend/src/: cache.ts  db.ts  events.sql  handlers.rs  index.ts  main.rs  main.ts
backend/src/queries/: orderListed.ts
backend/src/scripts/: createTable.ts
frontend/: .prettierrc.json  bundle-stats.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tailwind.config.ts  types.d.ts  vite.config.ts  wagmi.config.ts
frontend/app/: app.css  backgroundStyles.ts  cache.ts  config.ts  loaders.ts  minimartAbi.ts  root.tsx  routes.ts  utils.ts
frontend/app/components/: AddOrderButton.tsx  ApproveButton.tsx  ConnectButton.tsx  Dropdown.tsx  EmptyState.tsx  ErrorBoundary.tsx  FcConnect.tsx  Hamburger.tsx  ListingCardMobile.tsx  ListingRow.tsx  Loader.tsx  LoadingSpinner.tsx  (+14 more)
frontend/src/: generated.ts
indexer/: Dockerfile  fly.toml  package.json  pnpm-lock.yaml
indexer/src/: main.ts  queue.ts
subgraph/: networks.json  package-lock.json  package.json  schema.graphql  subgraph.yaml
subgraph/src/: mini-mart.ts
subgraph/tests/: mini-mart-utils.ts  mini-mart.test.ts
types/: .prettierrc.json  main.ts  package.json  tsconfig.json
(+26 files in other folders)
