[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite" ] }
serde = {version = "1.0.219", features = ["derive"]}
axum = "0.8.4"
tokio = { version = "1.45.1", features = ["full"] }
dotenvy = "0.15.7"
graphql_client = "0.14.0"
reqwest = {version = "0.12.20", features = ["json"]}
